--- a/views/includes/sidebar.ejs
+++ b/views/includes/sidebar.ejs
@@ -32,6 +32,12 @@
                     <div class="nav-item">
                         <a href="/pd/newPodobiTable"><i class="ik ik-command"></i><span>কর্মকর্তা কর্মচারীদের পদবী <br>ও গ্রেডের তালিকা</span></a>
                     </div>
+                    <div class="nav-item">
+                        <a href="/pd/cropCategoryTable"><i class="ik ik-command"></i><span></span>ফসলের ক্যাটাগরিসমূহ</a>
+                    </div>
+                    <div class="nav-item">
+                        <a href="/pd/apaCategoryTable"><i class="ik ik-command"></i><span></span>এপিএ ক্যাটাগরিসমূহ</a>
+                    </div>
                     <!-- <div class="nav-item">
                         <a href="/pd/newcropCategoryList"><i class="ik ik-command"></i><span>মাসিক প্রতিবেদনের ক্যাটাগরিসমূহ</span></a>
                     </div> -->
