--- a/views/center/monthlyProgress/pdf.ejs
+++ b/views/center/monthlyProgress/pdf.ejs
@@ -11,6 +11,13 @@
 
             justify-content: center
         }
+        .table, td, th {
+  border: 1px solid black;
+}
+.table {
+  width: 100%;
+  border-collapse: collapse;
+}
         .center {
             text-align: center;
         }
@@ -46,7 +53,6 @@
                 <th>সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)</th>
                 <th>নীট মজুদ</th>
                 <th>মন্তব্য</th>
-                <th>পরিবর্তন</th>
             </tr>
             </thead>
             <tbody>
@@ -207,7 +213,6 @@
                         <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
                         <td><%= new Number((totalProductionSum + daePraptiSum + prevYearJer) - (currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
                         <td><%= montobboSum %></td>
-                        <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>/<%= currentMonth %>"><i class="fa fa-edit"></i></a></td>
                     </tr>
                 <% }) %>
             </tbody>
@@ -234,7 +239,6 @@
                     <th>মৃত/বিনষ্ট রাইটআপ</th>
                     <th>সর্বমোট (মোট+ডিএই চালানে প্রদান+মৃত/বিনষ্ট রাইটআপ)</th>
                     <th>নীট মজুদ</th>
-                    <th>মন্তব্য</th>
                 </tr>
                 </thead>
                 <tbody>
