add monthly progress

--- a/views/center/monthlyProgress/monthlyProgressForm.ejs
+++ b/views/center/monthlyProgress/monthlyProgressForm.ejs
@@ -64,26 +64,26 @@
                                     <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="productionTarget" class="col-md-3 control-label">উৎপাদন (লক্ষ্যমাত্রা)</label>
-                                            <input type="text" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)">
+                                            <input type="number" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="0">
                                         </div>
                                     </div>
 
                                     <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="productionCurrent" class="col control-label">উৎপাদন (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)">
+                                            <input type="number" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)" value="0">
                                         </div>
                                         <div class="col">
                                             <label for="daePrapti" class="col control-label">ডিএই চালানে প্রাপ্তি (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি">
+                                            <input type="number" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি" value="0">
                                         </div>
                                         <div class="col">
                                             <label for="bitotonCurrentMonth" class="col control-label">বিতরণ (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)">
+                                            <input type="number" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)" value="0">
                                         </div>
                                         <div class="col">
                                             <label for="daeProdan" class="col control-label">ডিএই চালানে প্রদান (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান">
+                                            <input type="number" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান" value="0">
                                         </div>
                                     </div>
 
@@ -91,7 +91,7 @@
 
                                         <div class="col">
                                             <label for="deadWriteup" class="col control-label">মৃত/বিনষ্ট রাইটআপ (চলতি মাস)</label>
-                                            <input type="text" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ">
+                                            <input type="number" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ" value="0">
                                         </div>
 
                                         <div class="col">
