--- a/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -182,7 +182,10 @@
                 <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer)-(currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
                 <td><%= montobboSum %></td>
-                <td><a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-edit"></i></a></td>
+                <td>
+                    <a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-edit"></i></a>
+                    <a class="btn btn-danger btn-xs" href="/center/monthlyProgressDelete/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-trash"></i></a>
+                </td>
             </tr>
         <% }) %>
         </tbody>
