--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -171,10 +171,7 @@
                                         <div class="col">
                                             <label for="productionCurrent" class="col control-label">উৎপাদন (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input readonly class="form-control" value="<%= currentProductionSum %> + " >
-                                                </div>
-                                                <div class="col-9">
+                                                <div class="col-12">
                                                     <input type="number" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)" value="<%= currentProductionSum %>">
                                                 </div>
                                             </div>
@@ -182,10 +179,8 @@
                                         <div class="col">
                                             <label for="daePrapti" class="col control-label">ডিএই চালানে প্রাপ্তি (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input class="form-control" readonly type="text" value="<%= daePraptiSum %> + ">
-                                                </div>
-                                                <div class="col-9">
+
+                                                <div class="col-12">
                                                     <input type="number" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি" value="<%= daePraptiSum %>">
                                                 </div>
                                             </div>
@@ -193,10 +188,10 @@
                                         <div class="col">
                                             <label for="bitotonCurrentMonth" class="col control-label">বিতরণ (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input readonly class="form-control" type="text" value="<%= currentBitoronSum %> + ">
+                                                <div class="col-0">
+<!--                                                    <input readonly class="form-control" type="text" value=" + ">-->
                                                 </div>
-                                                <div class="col-9">
+                                                <div class="col-12">
                                                     <input type="number" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)" value="<%= currentBitoronSum %>">
                                                 </div>
                                             </div>
@@ -205,9 +200,7 @@
                                         <div class="col">
                                             <label for="daeProdan" class="col control-label">ডিএই চালানে প্রদান (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input readonly class="form-control" type="text" value="<%= currentDaeProdanSum %> +">
-                                                </div>
+
                                                 <div class="col-9">
                                                     <input type="number" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান" value="<%= currentDaeProdanSum %>">
                                                 </div>
@@ -220,10 +213,8 @@
                                         <div class="col">
                                             <label for="deadWriteup" class="col control-label">মৃত/বিনষ্ট রাইটআপ (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input type="text" value="<%= currentMritoSum %> + " readonly class="form-control">
-                                                </div>
-                                                <div class="col-9">
+
+                                                <div class="col-12">
                                                     <input type="number" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ" value="<%= currentMritoSum %>">
                                                 </div>
                                             </div>
@@ -241,9 +232,6 @@
 
                                             <input type="hidden" name="editDate" readonly class="date-picker form-control" id="startDate" value="<%= editDate %>" />
                                         </div>
-
-
-
 
                                     </div>
 
