edit needs more improvement

--- a/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/center/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -172,7 +172,7 @@
                                             <label for="productionCurrent" class="col control-label">উৎপাদন (চলতি মাস)</label>
                                             <div class="row">
                                                 <div class="col-12">
-                                                    <input type="number" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)" value="<%= currentProductionSum %>">
+                                                    <input type="number" class="form-control" name="productionCurrent" placeholder="<%= currentProductionSum %>">
                                                 </div>
                                             </div>
                                         </div>
@@ -181,7 +181,7 @@
                                             <div class="row">
 
                                                 <div class="col-12">
-                                                    <input type="number" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি" value="<%= daePraptiSum %>">
+                                                    <input type="number" class="form-control" name="daePrapti" placeholder="<%= daePraptiSum %>">
                                                 </div>
                                             </div>
                                         </div>
@@ -192,7 +192,7 @@
 <!--                                                    <input readonly class="form-control" type="text" value=" + ">-->
                                                 </div>
                                                 <div class="col-12">
-                                                    <input type="number" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)" value="<%= currentBitoronSum %>">
+                                                    <input type="number" class="form-control" name="bitotonCurrentMonth" placeholder="<%= currentBitoronSum %>">
                                                 </div>
                                             </div>
 
@@ -202,7 +202,7 @@
                                             <div class="row">
 
                                                 <div class="col-9">
-                                                    <input type="number" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান" value="<%= currentDaeProdanSum %>">
+                                                    <input type="number" class="form-control" name="daeProdan" placeholder="<%= currentDaeProdanSum %>">
                                                 </div>
                                             </div>
                                         </div>
@@ -215,7 +215,7 @@
                                             <div class="row">
 
                                                 <div class="col-12">
-                                                    <input type="number" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ" value="<%= currentMritoSum %>">
+                                                    <input type="number" class="form-control" name="deadWriteup" placeholder="<%= currentMritoSum %>">
                                                 </div>
                                             </div>
                                         </div>
