--- a/views/center/monthlyProgress/monthlyProgressForm.ejs
+++ b/views/center/monthlyProgress/monthlyProgressForm.ejs
@@ -3,11 +3,19 @@
           <%- include('../../includes/topbar')-%>
             <div class="page-wrap">
               <%- include('../../includes/sidebar')-%>
+
               <div class="main-content">
                 <div class="container-fluid">
                     <h4 class="text-right"><b>Month & Year : </b><span> <%= moment().locale("bn").format("ll")   %></span></h4>
+                    <% if(messages.message){ %>
+                        <div class="alert alert-warning alert-dismissible fade show" role="alert">
+                            <strong><%= messages.message %></strong>
+                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
+                        </div>
+                    <% } %>
                     <div class="row clearfix">
-
                     <div id="signupbox" style="margin-top:50px" class="mainbox col-md-12 col-md-offset-12 col-sm-12 col-sm-offset-12">
                         <div class="panel panel-info">
                             <div class="panel-heading">
@@ -98,13 +106,18 @@
                                             <label for="comment" class="col-md-3 control-label">মন্তব্য</label>
                                             <input type="text" class="form-control" name="comment" placeholder="মন্তব্য">
                                         </div>
-
                                     </div>
 
                                     <div class="form-group">
 <!--                                        <label for="year" class="col-md-3 control-label">userid</label>-->
                                         <div class="col-md-9">
                                             <input type="hidden" class="form-control" name="user_id" placeholder="id" value="<%= user_id %>" >
+                                        </div>
+                                    </div>
+
+                                    <div class="form-group">
+                                        <div class="col-md-12">
+                                            <input type="hidden" class="form-control" name="currentMonth" value="<%= currentMonth %>">
                                         </div>
                                     </div>
                                     
@@ -121,6 +134,7 @@
                                      </div>
 
                                 </form>
+
                                 
                             </div>
                         </div>
