--- a/views/pd/cropCategoryTable/cropCategoryTable.ejs
+++ b/views/pd/cropCategoryTable/cropCategoryTable.ejs
@@ -7,7 +7,7 @@
                 <div class="container-fluid">
                     <div class="row clearfix">
                         <div class="col-md-10">
-                            <h1 class="text-center"><%= title %></h1>
+                            <h1 class="text-center">ফসলের ক্যাটাগরির কোডসমূহ</h1>
                         </div>
                     </div>
                      <!--    main catg -->
