--- a/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
+++ b/views/center/monthlyProgress/monthlyProgressCustomTable.ejs
@@ -180,7 +180,7 @@
                 <td><%= new Number(currentDaeProdanSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentMritoSum).toLocaleString("bn-BD") %></td>
                 <td><%= new Number(currentDaeProdanSum + currentMritoSum).toLocaleString("bn-BD") %></td>
-                <td><%= new Number((currentProductionSum + previousMonthProduction + daePraptiSum + prevYearJer)-(currentDaeProdanSum + currentMritoSum)).toLocaleString("bn-BD") %></td>
+                <td><%= new Number((currentProductionSum + previousMonthProduction )-(currentBitoronSum + previousMonthBitoronSum)).toLocaleString("bn-BD") %></td>
                 <td><%= montobboSum %></td>
                 <td>
                     <a class="btn btn-primary btn-xs" href="/center/monthlyProgressEdit/<%= row.id %>/<%= selectedDate %>"><i class="fa fa-edit"></i></a>
