--- a/views/pd/monthlyProgress/monthlyProgressFormEdit.ejs
+++ b/views/pd/monthlyProgress/monthlyProgressFormEdit.ejs
@@ -100,7 +100,7 @@
                                 </p>
                             </div>
                             <div class="panel-body" >
-                                <form action="/pd/monthlyProgressUpdate/<%=monthProgress.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
+                                <form action="/center/monthlyProgressUpdate/<%=monthProgress.id%>" id="FieldTrialForm" class="form-horizontal" method="post"  role="form">
                                     <div id="signupalert" style="display:none" class="alert alert-danger">
                                         <p>Error:</p>
                                         <span></span>
@@ -163,7 +163,7 @@
                                     <div class="form-row mt-3">
                                         <div class="col">
                                             <label for="productionTarget" class="col-md-3 control-label">উৎপাদন (লক্ষ্যমাত্রা)</label>
-                                            <input type="text" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="<%= productionTargetSum %>">
+                                            <input type="number" class="form-control" name="productionTarget" placeholder="উৎপাদন (লক্ষ্যমাত্রা)" value="<%= productionTargetSum %>">
                                         </div>
                                     </div>
 
@@ -171,33 +171,28 @@
                                         <div class="col">
                                             <label for="productionCurrent" class="col control-label">উৎপাদন (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input readonly class="form-control" value="<%= currentProductionSum %> + " >
-                                                </div>
-                                                <div class="col-9">
-                                                    <input type="text" class="form-control" name="productionCurrent" placeholder="উৎপাদন (চলতি মাস)" value="0">
+                                                <div class="col-12">
+                                                    <input type="number" class="form-control" name="productionCurrent" placeholder="<%= currentProductionSum %>">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <label for="daePrapti" class="col control-label">ডিএই চালানে প্রাপ্তি (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input class="form-control" readonly type="text" value="<%= daePraptiSum %> + ">
-                                                </div>
-                                                <div class="col-9">
-                                                    <input type="text" class="form-control" name="daePrapti" placeholder="ডিএই চালানে প্রাপ্তি" value="0">
+
+                                                <div class="col-12">
+                                                    <input type="number" class="form-control" name="daePrapti" placeholder="<%= daePraptiSum %>">
                                                 </div>
                                             </div>
                                         </div>
                                         <div class="col">
                                             <label for="bitotonCurrentMonth" class="col control-label">বিতরণ (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input readonly class="form-control" type="text" value="<%= currentBitoronSum %> + ">
+                                                <div class="col-0">
+                                                    <!--                                                    <input readonly class="form-control" type="text" value=" + ">-->
                                                 </div>
-                                                <div class="col-9">
-                                                    <input type="text" class="form-control" name="bitotonCurrentMonth" placeholder="বিতরণ (চলতি মাস)" value="0">
+                                                <div class="col-12">
+                                                    <input type="number" class="form-control" name="bitotonCurrentMonth" placeholder="<%= currentBitoronSum %>">
                                                 </div>
                                             </div>
 
@@ -205,11 +200,9 @@
                                         <div class="col">
                                             <label for="daeProdan" class="col control-label">ডিএই চালানে প্রদান (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input readonly class="form-control" type="text" value="<%= currentDaeProdanSum %> +">
-                                                </div>
+
                                                 <div class="col-9">
-                                                    <input type="text" class="form-control" name="daeProdan" placeholder="ডিএই চালানে প্রদান" value="0">
+                                                    <input type="number" class="form-control" name="daeProdan" placeholder="<%= currentDaeProdanSum %>">
                                                 </div>
                                             </div>
                                         </div>
@@ -220,11 +213,9 @@
                                         <div class="col">
                                             <label for="deadWriteup" class="col control-label">মৃত/বিনষ্ট রাইটআপ (চলতি মাস)</label>
                                             <div class="row">
-                                                <div class="col-3">
-                                                    <input type="text" value="<%= currentMritoSum %> + " readonly class="form-control">
-                                                </div>
-                                                <div class="col-9">
-                                                    <input type="text" class="form-control" name="deadWriteup" placeholder="মৃত/বিনষ্ট রাইটআপ" value="0">
+
+                                                <div class="col-12">
+                                                    <input type="number" class="form-control" name="deadWriteup" placeholder="<%= currentMritoSum %>">
                                                 </div>
                                             </div>
                                         </div>
